# super-id

./: .gitignore  Dockerfile  Dockerfile.prod  EVENTSOURCING.md  README.md  docker-compose.yml  run-tests.sh  super-id.cabal
.github/workflows/: ci.yml
app/: Main.hs
db/: init.sql
src/: App.hs  AudioGen.hs  DhallTypes.hs  EventStore.hs  Events.hs  ImageGen.hs  Logic.hs  Projection.hs  Repository.hs
test/: ApiSpec.hs
