cabal-version:       2.4
name:                super-id
version:             0.1.0.0
synopsis:            A simple Haskell project
license:             BSD-3-Clause
author:              Author name
maintainer:          author@example.com
build-type:          Simple

executable super-id
  main-is:             Main.hs
  other-modules:       DhallTypes
                     , ImageGen
                     , AudioGen
                     , Logic
                     , App
                     , Events
                     , EventStore
                     , Projection
  hs-source-dirs:      app, src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.14 && <5
                     , scotty
                     , dhall
                     , postgresql-simple
                     , JuicyPixels
                     , uuid
                     , base64-bytestring
                     , bytestring
                     , text
                     , http-types
                     , wai
                     , warp
                     , aeson
                     , mtl
                     , transformers
                     , containers
                     , vector
                     , process
                     , directory
                     , filepath
                     , time
                     , random
                     , unordered-containers
                     , temporary
                     , resource-pool

test-suite super-id-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       ApiSpec
                     , App
                     , AudioGen
                     , DhallTypes
                     , ImageGen
                     , Logic
                     , Events
                     , EventStore
                     , Projection
  hs-source-dirs:      test, app, src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.14 && <5
                     , scotty
                     , dhall
                     , postgresql-simple
                     , JuicyPixels
                     , uuid
                     , base64-bytestring
                     , bytestring
                     , text
                     , http-types
                     , wai
                     , warp
                     , aeson
                     , mtl
                     , transformers
                     , containers
                     , vector
                     , process
                     , directory
                     , filepath
                     , time
                     , random
                     , unordered-containers
                     , temporary
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , wai-extra
                     , resource-pool
